--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         extend: {
           colors: {
             clifford: '#da373d',
-            bike-primary: '#E76F51',
+            "bike-primary": '#E76F51',
+           "banner-background" :"rgba(231, 111, 81, 0.10)",
           }
         }
       }
@@ -69,36 +70,121 @@
 
  <main class="md:container md:mx-auto">
     <section>
-        <div class="carousel w-full">
+        <div class="carousel w-full lg:h-[500px] bg-banner-background">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="images/slider/bike1.png" class="w-full" />
+              <div class="flex flex-col lg:flex-row  lg:p-24 md:px-36 px-24 flex-1 gap-28">
+                <div class="space-y-7 mt-16">
+                  <h1 class="text-5xl font-bold">Honda CBR 300R</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua <br>
+                    dolor do amet sint. Velit officia consequat duis enim velit <br>
+                    mollit. Exercitation veniam consequat sunt nostrud amet</p>
+                    <a class="btn btn-error bike-primary text-white">Purchase</a>
+                </div>
+                <div class="flex-1 ">
+                  <img src="images/slider/bike1.png" class="w-[500px]" />
+                </div>
+
+              </div>
+
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="images/slider/bike2.png" class="w-full" />
+              <div class="flex flex-col lg:flex-row  lg:p-24 md:px-36 px-24 flex-1 gap-28">
+                <div class="space-y-7 mt-16">
+                  <h1 class="text-5xl font-bold">Honda CBR 300R</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua <br>
+                    dolor do amet sint. Velit officia consequat duis enim velit <br>
+                    mollit. Exercitation veniam consequat sunt nostrud amet</p>
+                    <a class="btn btn-error bike-primary text-white">Purchase</a>
+                </div>
+                <div class="flex-1 ">
+                  <img src="images/slider/bike2.png" class="w-[500px]" />
+                </div>
+
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="/images/slider/bike3.png" class="w-full" />
+              <div class="flex flex-col lg:flex-row  lg:p-24 md:px-36 px-24 flex-1 gap-28">
+                <div class="space-y-7 mt-16">
+                  <h1 class="text-5xl font-bold">Honda CBR 300R</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua <br>
+                    dolor do amet sint. Velit officia consequat duis enim velit <br>
+                    mollit. Exercitation veniam consequat sunt nostrud amet</p>
+                    <a class="btn btn-error bike-primary text-white">Purchase</a>
+                </div>
+                <div class="flex-1 ">
+                  <img src="images/slider/bike3.png" class="w-[500px]" />
+                </div>
+
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="/images/slider/bike4.png" class="w-full" />
+              <div class="flex flex-col lg:flex-row  lg:p-24 md:px-36 px-24 flex-1 gap-28">
+                <div class="space-y-7 mt-16">
+                  <h1 class="text-5xl font-bold">Honda CBR 300R</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua <br>
+                    dolor do amet sint. Velit officia consequat duis enim velit <br>
+                    mollit. Exercitation veniam consequat sunt nostrud amet</p>
+                    <a class="btn btn-error bike-primary text-white">Purchase</a>
+                </div>
+                <div class="flex-1 ">
+                  <img src="images/slider/bike4.png" class="w-[500px]" />
+                </div>
+
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
             </div>
           </div>
+    </section>
+    <!--latest news-->
+    <section class="py-24">
+      <h1 class="text-4xl font-semibold text-center mb-10">latest News</h1>
+      <div class=" cards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-5 mx-16 ">
+        <div class="card card-compact bg-base-100 shadow-xl">
+          <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title py-1 text-2xl">Ducati XDIAVEL S-73</h2>
+            <p>If a biker coose a bike whose sbike does he choose?</p>
+            <div class="card-actions py-2 ">
+              <button class="btn btn-error bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card card-compact  bg-base-100 shadow-xl">
+          <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title py-1 text-2xl">Motorcycles & Scooters</h2>
+            <p>If a biker coose a bike whose sbike does he choose?</p>
+            <div class="card-actions py-2 ">
+              <button class="btn btn-error bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card card-compact  bg-base-100 shadow-xl">
+          <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title py-1 text-2xl">2021 Honda CBR500R</h2>
+            <p>If a biker coose a bike whose sbike does he choose?</p>
+            <div class="card-actions py-2 ">
+              <button class="btn btn-error bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
  </main>
