--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <section class="py-24">
       <h1 class="text-4xl font-semibold text-center mb-10">Happy <span class="text-bike-primary">Clients says</span></h1>
       <!--first review-->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3   mt-20 gap-x-12 mx-14">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3   mt-20 ">
         <div class="card w-96 bg-base-100 shadow-xl">
           <figure><img class="w-[149px]" src="images/others/user-1.png" alt="Shoes" /></figure>
           <div class="card-body">
